# vicon-nexus-unity-stream-py

./: .appveyor.yml  CHANGELOG.md  LICENSE.md  Makefile  README.md  mkdocs.yml  pyproject.toml  scent.py  sh.exe.stackdump
ViNexPy/: __init__.py  _main.py  data_streamer.py  file.txt  package-list.txt
tests/: conftest.py  test_cli.py
vicon_nexus_unity_stream_py/: __init__.py  _main.py  _utils.py  cli.py  data_streamer.py
