[tool.poetry]

name = "vicon_nexus_unity_stream_py"
version = "0.3"
description = "Python script to stream data from vicon nexus to unity"

license = "MIT"

authors = ["Ahmed Shariff <shariff.mfa@outlook.com>", "Omang <omangbaheti@gmail.com>"]
readme = "README.md"

homepage = "https://pypi.org/project/vicon_nexus_unity_stream_py"
documentation = "https://vicon_nexus_unity_stream_py.readthedocs.io"
repository = "https://github.com/ovi-lab/vicon-nexus-unity-stream-py"

keywords = [
]
classifiers = [
    # TODO: update this list to match your application: https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
include = ["vicon_nexus_unity_stream_py/static/index.html"]

[tool.poetry.dependencies]

python = ">=3.8,<4.0"

# TODO: Remove these and add your library's requirements
click = ">=8.1.3"
# flask_restful = ">=0.3.8"
pandas = ">=1.5.1"
loguru = ">=0.5.0"
# Flask-RESTful = ">=0.3.9"
# msgpack = ">=1.0.4"
# alive-progress = ">=2.4.1"
fastapi = "^0.99"
importlib-metadata = ">=8.0.0"

[tool.poetry.dev-dependencies]

# Testing
pytest = ">7.0"

# Documentation
mkdocs = ">=1.2.3"
pygments = "^2.5.2"


[tool.poetry.scripts]

vicon-nexus-stream = "vicon_nexus_unity_stream_py.cli:cli"

[tool.black]

target-version = ["py36", "py37"]
skip-string-normalization = true

[build-system]

requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
